[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/user-interface/dialogue_background.png" type="Texture" id=1]
[ext_resource path="res://src/user-interface/dialogue-name-handle/dialogue-name-handle.gd" type="Script" id=2]
[ext_resource path="res://assets/user-interface/fonts/default-font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/user-interface/fonts/monogram_extended.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 12
extra_spacing_char = 1
extra_spacing_space = -4
font_data = ExtResource( 4 )

[node name="DialogueNameHandle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -229.0
margin_bottom = -164.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="RichTextLabel" parent="."]
margin_left = 6.0
margin_top = 3.0
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 0.941176, 0.839216, 1 )
bbcode_enabled = true
bbcode_text = "udifhadsiuf"
text = "udifhadsiuf"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RectButton" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 17.0
mouse_filter = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 1, 0.941176, 0.839216, 1 )
disabled = true
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}
